--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mockjs": "^1.1.0",
+    "mongodb": "^3.5.1",
+    "mongoose": "^5.8.9",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
@@ -30,7 +32,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node ./server"
   },
   "eslintConfig": {
     "extends": "react-app"
