--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/dom": "^6.12.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -18,15 +19,14 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mockjs": "^1.1.0",
-    "mongodb": "^3.5.1",
-    "mongoose": "^5.8.9",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-markdown": "^4.2.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "sqlite3": "^4.1.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
