--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "formidable": "^1.2.1",
+    "history": "^4.10.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mockjs": "^1.1.0",
